Modified the config screen structure

--- a/common/src/main/resources/assets/dynmus/lang/en_us.json
+++ b/common/src/main/resources/assets/dynmus/lang/en_us.json
@@ -1,35 +1,39 @@
 {
 	"dynmus.midnightconfig.title": "Dynamic Music Config",
-	"dynmus.midnightconfig.searchRange": "Search range for cave detection",
-	"dynmus.midnightconfig.searchRange.tooltip": "Number of blocks in each direction. 0 disables cave detection. Used for 'Cave Music' and 'Dynamic Pitch'",
+	"dynmus.midnightconfig.musicTypesTitle": "§l§nMusic Types Toggles",
+	"dynmus.midnightconfig.caveMusic": "Cave Music",
+	"dynmus.midnightconfig.caveMusic.tooltip": "Play cave music in caves",
+	"dynmus.midnightconfig.coldMusic": "Cold Music",
+	"dynmus.midnightconfig.coldMusic.tooltip": "Play cold music in cold biomes",
+	"dynmus.midnightconfig.hotMusic": "Hot Music",
+	"dynmus.midnightconfig.hotMusic.tooltip": "Play hot music in hot biomes",
+	"dynmus.midnightconfig.niceMusic": "Nice Music",
+	"dynmus.midnightconfig.niceMusic.tooltip": "Play nice music during the day",
+	"dynmus.midnightconfig.downMusic": "Down Music",
+	"dynmus.midnightconfig.downMusic.tooltip": "Play down/sad music during the night and while it rains",
+	"dynmus.midnightconfig.endCreativeMusic": "End Creative Music",
+	"dynmus.midnightconfig.endCreativeMusic.tooltip": "Play original music composed by LudoCrypt when in creative mode in the End dimension",
+	"dynmus.midnightconfig.endBossMusic": "End Boss Music",
+	"dynmus.midnightconfig.endBossMusic.tooltip": "Play original music composed by LudoCrypt when fighting the dragon in the End dimension",
+	"dynmus.midnightconfig.dynamicPitchTitle": "§l§nDynamic Pitch",
+	"dynmus.midnightconfig.dynamicPitch": "Dynamic Pitch",
+	"dynmus.midnightconfig.dynamicPitch.tooltip": "The closer the time is to the Anchor, the slower the music plays",
+	"dynmus.midnightconfig.dynamicPitchAnchor": "Dynamic Pitch Anchor",
+	"dynmus.midnightconfig.dynamicPitchAnchor.tooltip": "The anchor that the Dynamic Pitch uses\n18000 being midnight",
+	"dynmus.midnightconfig.dynamicPitchFaster": "Dynamic Pitch 'Faster'",
+	"dynmus.midnightconfig.dynamicPitchFaster.tooltip": "Choose to play music faster, rather than slower",
+	"dynmus.midnightconfig.caveDetectionTitle": "§l§nCave Detection",
+	"dynmus.midnightconfig.searchRange": "Search range",
+	"dynmus.midnightconfig.searchRange.tooltip": "Number of blocks in each direction\n0 disables cave detection\nUsed for 'Cave Music' and 'Dynamic Pitch'",
 	"dynmus.midnightconfig.darknessCap": "Light Level Cap",
-	"dynmus.midnightconfig.darknessCap.tooltip": "Light level of blocks used for cave detection.",
+	"dynmus.midnightconfig.darknessCap.tooltip": "Light level of blocks used for cave detection",
 	"dynmus.midnightconfig.darknessPercent": "Darkness Percent",
-	"dynmus.midnightconfig.darknessPercent.tooltip": "Percent of blocks with low light levels to trigger cave detection.",
+	"dynmus.midnightconfig.darknessPercent.tooltip": "Percent of blocks with low light levels to trigger cave detection",
 	"dynmus.midnightconfig.stonePercent": "Stone Percent",
 	"dynmus.midnightconfig.stonePercent.tooltip": "Percent of stone to trigger cave detection",
-	"dynmus.midnightconfig.pseudoMineshaftSearchRange": "Mineshaft Search Range",
-	"dynmus.midnightconfig.pseudoMineshaftSearchRange.tooltip": "Number of blocks in each direction. 0 disables mineshaft detection. Used to activate 'Dynamic Pitch' in mineshafts.",
+	"dynmus.midnightconfig.mineshaftDetectionTitle": "§l§nMineshaft Detection",
+	"dynmus.midnightconfig.pseudoMineshaftSearchRange": "Search Range",
+	"dynmus.midnightconfig.pseudoMineshaftSearchRange.tooltip": "Number of blocks in each direction\n0 disables mineshaft detection\nUsed to accelerate the activation of 'Dynamic Pitch' in mineshaft.",
 	"dynmus.midnightconfig.pseudoMineshaftPercent": "Mineshaft Percent",
-	"dynmus.midnightconfig.pseudoMineshaftPercent.tooltip": "Percent of mineshaft blocks for mineshaft detection.",
-	"dynmus.midnightconfig.caveMusic": "Cave Music",
-	"dynmus.midnightconfig.caveMusic.tooltip": "Play cave music in caves.",
-	"dynmus.midnightconfig.coldMusic": "Cold Music",
-	"dynmus.midnightconfig.coldMusic.tooltip": "Play cold music in cold biomes.",
-	"dynmus.midnightconfig.hotMusic": "Hot Music",
-	"dynmus.midnightconfig.hotMusic.tooltip": "Play hot music in hot biomes.",
-	"dynmus.midnightconfig.niceMusic": "Nice Music",
-	"dynmus.midnightconfig.niceMusic.tooltip": "Play nice music during the day.",
-	"dynmus.midnightconfig.downMusic": "Down Music",
-	"dynmus.midnightconfig.downMusic.tooltip": "Play down/sad music during the night and while it rains.",
-	"dynmus.midnightconfig.endCreativeMusic": "End Creative Music",
-	"dynmus.midnightconfig.endCreativeMusic.tooltip": "Play original music composed by LudoCrypt when in creative mode in the End dimension.",
-	"dynmus.midnightconfig.endBossMusic": "End Boss Music",
-	"dynmus.midnightconfig.endBossMusic.tooltip": "Play original music composed by LudoCrypt when fighting the dragon in the End dimension.",
-	"dynmus.midnightconfig.dynamicPitch": "Dynamic Pitch",
-	"dynmus.midnightconfig.dynamicPitch.tooltip": "The closer the time is to the Anchor, the slower the music plays.",
-	"dynmus.midnightconfig.dynamicPitchAnchor": "Dynamic Pitch Anchor",
-	"dynmus.midnightconfig.dynamicPitchAnchor.tooltip": "The anchor that the Dynamic Pitch uses. 18000 being midnight.",
-	"dynmus.midnightconfig.dynamicPitchFaster": "Dynamic Pitch 'Faster'",
-	"dynmus.midnightconfig.dynamicPitchFaster.tooltip": "Choose to play music faster, rather than slower"
+	"dynmus.midnightconfig.pseudoMineshaftPercent.tooltip": "Percent of mineshaft blocks for mineshaft detection"
 }
