Individually toggleable music for each music type

--- a/common/src/main/resources/assets/dynmus/lang/en_us.json
+++ b/common/src/main/resources/assets/dynmus/lang/en_us.json
@@ -1,6 +1,9 @@
 {
   "dynmus.midnightconfig.title": "Dynamic Music Config",
-  "dynmus.midnightconfig.musicTypesTitle": "§l§nMusic Types Toggles",
+
+  "dynmus.midnightconfig.generalTitle": "§l§nGeneral Config",
+
+  "dynmus.midnightconfig.musicTypesTitle": "§nMusic Types Toggles",
   "dynmus.midnightconfig.caveMusic": "Cave Music",
   "dynmus.midnightconfig.caveMusic.tooltip": "Play cave music in caves",
   "dynmus.midnightconfig.coldMusic": "Cold Music",
@@ -15,14 +18,16 @@
   "dynmus.midnightconfig.endCreativeMusic.tooltip": "Play original music composed by LudoCrypt when in creative mode in the End dimension",
   "dynmus.midnightconfig.endBossMusic": "End Boss Music",
   "dynmus.midnightconfig.endBossMusic.tooltip": "Play original music composed by LudoCrypt when fighting the dragon in the End dimension",
-  "dynmus.midnightconfig.dynamicPitchTitle": "§l§nDynamic Pitch",
+
+  "dynmus.midnightconfig.dynamicPitchTitle": "§nDynamic Pitch",
   "dynmus.midnightconfig.dynamicPitch": "Dynamic Pitch",
   "dynmus.midnightconfig.dynamicPitch.tooltip": "The closer the time is to the Anchor, the slower the music plays",
   "dynmus.midnightconfig.dynamicPitchAnchor": "Dynamic Pitch Anchor",
   "dynmus.midnightconfig.dynamicPitchAnchor.tooltip": "The anchor that the Dynamic Pitch uses\n18000 being midnight",
   "dynmus.midnightconfig.dynamicPitchFaster": "Dynamic Pitch 'Faster'",
   "dynmus.midnightconfig.dynamicPitchFaster.tooltip": "Choose to play music faster, rather than slower",
-  "dynmus.midnightconfig.caveDetectionTitle": "§l§nCave Detection",
+
+  "dynmus.midnightconfig.caveDetectionTitle": "§nCave Detection",
   "dynmus.midnightconfig.searchRange": "Search range",
   "dynmus.midnightconfig.searchRange.tooltip": "Number of blocks in each direction\n0 disables cave detection\nUsed for 'Cave Music' and 'Dynamic Pitch'",
   "dynmus.midnightconfig.darknessCap": "Light Level Cap",
@@ -31,9 +36,247 @@
   "dynmus.midnightconfig.darknessPercent.tooltip": "Percent of blocks with low light levels to trigger cave detection",
   "dynmus.midnightconfig.stonePercent": "Stone Percent",
   "dynmus.midnightconfig.stonePercent.tooltip": "Percent of stone to trigger cave detection",
-  "dynmus.midnightconfig.mineshaftDetectionTitle": "§l§nMineshaft Detection",
+
+  "dynmus.midnightconfig.mineshaftDetectionTitle": "§nMineshaft Detection",
   "dynmus.midnightconfig.pseudoMineshaftSearchRange": "Search Range",
   "dynmus.midnightconfig.pseudoMineshaftSearchRange.tooltip": "Number of blocks in each direction\n0 disables mineshaft detection\nUsed to accelerate the activation of 'Dynamic Pitch' in mineshafts",
   "dynmus.midnightconfig.pseudoMineshaftPercent": "Mineshaft Percent",
-  "dynmus.midnightconfig.pseudoMineshaftPercent.tooltip": "Percent of mineshaft blocks for mineshaft detection"
+  "dynmus.midnightconfig.pseudoMineshaftPercent.tooltip": "Percent of mineshaft blocks for mineshaft detection",
+
+  "dynmus.midnightconfig.musicSelectorTitle": "§l§nIndividual Music Toggle Per Type",
+
+  "dynmus.midnightconfig.caveMusicTitle": "§d§nCave Music",
+  "dynmus.midnightconfig.creative1Cave": "Biome Fest (creative mode only)",
+  "dynmus.midnightconfig.creative2Cave": "Blind Spots (creative mode only)",
+  "dynmus.midnightconfig.creative3Cave": "Haunt Muskie (creative mode only)",
+  "dynmus.midnightconfig.creative4Cave": "Aria Math (creative mode only)",
+  "dynmus.midnightconfig.creative5Cave": "Dreiton (creative mode only)",
+  "dynmus.midnightconfig.creative6Cave": "Taswell (creative mode only)",
+  "dynmus.midnightconfig.calm1Cave": "Minecraft",
+  "dynmus.midnightconfig.calm2Cave": "Clark",
+  "dynmus.midnightconfig.calm3Cave": "Sweden",
+  "dynmus.midnightconfig.hal1Cave": "Subwoofer Lullaby",
+  "dynmus.midnightconfig.hal2Cave": "Living Mice",
+  "dynmus.midnightconfig.hal3Cave": "Haggstrom",
+  "dynmus.midnightconfig.hal4Cave": "Danny",
+  "dynmus.midnightconfig.nuance1Cave": "Key",
+  "dynmus.midnightconfig.nuance2Cave": "Oxygène",
+  "dynmus.midnightconfig.piano1Cave": "Dry Hands",
+  "dynmus.midnightconfig.piano2Cave": "Wet Hands",
+  "dynmus.midnightconfig.piano3Cave": "Mice on Venus",
+  "dynmus.midnightconfig.aerieCave": "Aerie",
+  "dynmus.midnightconfig.ancestryCave": "Ancestry",
+  "dynmus.midnightconfig.an_ordinary_dayCave": "An Ordinary Day",
+  "dynmus.midnightconfig.comforting_memoriesCave": "Comforting Memories",
+  "dynmus.midnightconfig.firebugsCave": "Firebugs",
+  "dynmus.midnightconfig.floating_dreamCave": "Floating Dream",
+  "dynmus.midnightconfig.infinite_amethystCave": "Infinite Amethyst",
+  "dynmus.midnightconfig.labyrinthineCave": "Labyrinthine",
+  "dynmus.midnightconfig.left_to_bloomCave": "Left to Bloom",
+  "dynmus.midnightconfig.one_more_dayCave": "One More Day",
+  "dynmus.midnightconfig.stand_tallCave": "Stand Tall",
+  "dynmus.midnightconfig.wendingCave": "Wending",
+  "dynmus.midnightconfig.thirteenCave": "Thirteen",
+  "dynmus.midnightconfig.catCave": "Cat",
+  "dynmus.midnightconfig.blocksCave": "Blocks",
+  "dynmus.midnightconfig.chirpCave": "Chirp",
+  "dynmus.midnightconfig.farCave": "Far",
+  "dynmus.midnightconfig.mallCave": "Mall",
+  "dynmus.midnightconfig.mellohiCave": "Mellohi",
+  "dynmus.midnightconfig.stalCave": "Stal",
+  "dynmus.midnightconfig.stradCave": "Strad",
+  "dynmus.midnightconfig.wardCave": "Ward",
+  "dynmus.midnightconfig.elevenCave": "Eleven",
+  "dynmus.midnightconfig.waitCave": "Wait",
+  "dynmus.midnightconfig.othersideCave": "otherside",
+  "dynmus.midnightconfig.fiveCave": "Five",
+  "dynmus.midnightconfig.pigstepCave": "Pigstep",
+
+  "dynmus.midnightconfig.coldMusicTitle": "§b§nCold Music",
+  "dynmus.midnightconfig.creative1Cold": "Biome Fest (creative mode only)",
+  "dynmus.midnightconfig.creative2Cold": "Blind Spots (creative mode only)",
+  "dynmus.midnightconfig.creative3Cold": "Haunt Muskie (creative mode only)",
+  "dynmus.midnightconfig.creative4Cold": "Aria Math (creative mode only)",
+  "dynmus.midnightconfig.creative5Cold": "Dreiton (creative mode only)",
+  "dynmus.midnightconfig.creative6Cold": "Taswell (creative mode only)",
+  "dynmus.midnightconfig.calm1Cold": "Minecraft",
+  "dynmus.midnightconfig.calm2Cold": "Clark",
+  "dynmus.midnightconfig.calm3Cold": "Sweden",
+  "dynmus.midnightconfig.hal1Cold": "Subwoofer Lullaby",
+  "dynmus.midnightconfig.hal2Cold": "Living Mice",
+  "dynmus.midnightconfig.hal3Cold": "Haggstrom",
+  "dynmus.midnightconfig.hal4Cold": "Danny",
+  "dynmus.midnightconfig.nuance1Cold": "Key",
+  "dynmus.midnightconfig.nuance2Cold": "Oxygène",
+  "dynmus.midnightconfig.piano1Cold": "Dry Hands",
+  "dynmus.midnightconfig.piano2Cold": "Wet Hands",
+  "dynmus.midnightconfig.piano3Cold": "Mice on Venus",
+  "dynmus.midnightconfig.aerieCold": "Aerie",
+  "dynmus.midnightconfig.ancestryCold": "Ancestry",
+  "dynmus.midnightconfig.an_ordinary_dayCold": "An Ordinary Day",
+  "dynmus.midnightconfig.comforting_memoriesCold": "Comforting Memories",
+  "dynmus.midnightconfig.firebugsCold": "Firebugs",
+  "dynmus.midnightconfig.floating_dreamCold": "Floating Dream",
+  "dynmus.midnightconfig.infinite_amethystCold": "Infinite Amethyst",
+  "dynmus.midnightconfig.labyrinthineCold": "Labyrinthine",
+  "dynmus.midnightconfig.left_to_bloomCold": "Left to Bloom",
+  "dynmus.midnightconfig.one_more_dayCold": "One More Day",
+  "dynmus.midnightconfig.stand_tallCold": "Stand Tall",
+  "dynmus.midnightconfig.wendingCold": "Wending",
+  "dynmus.midnightconfig.thirteenCold": "Thirteen",
+  "dynmus.midnightconfig.catCold": "Cat",
+  "dynmus.midnightconfig.blocksCold": "Blocks",
+  "dynmus.midnightconfig.chirpCold": "Chirp",
+  "dynmus.midnightconfig.farCold": "Far",
+  "dynmus.midnightconfig.mallCold": "Mall",
+  "dynmus.midnightconfig.mellohiCold": "Mellohi",
+  "dynmus.midnightconfig.stalCold": "Stal",
+  "dynmus.midnightconfig.stradCold": "Strad",
+  "dynmus.midnightconfig.wardCold": "Ward",
+  "dynmus.midnightconfig.elevenCold": "Eleven",
+  "dynmus.midnightconfig.waitCold": "Wait",
+  "dynmus.midnightconfig.othersideCold": "otherside",
+  "dynmus.midnightconfig.fiveCold": "Five",
+  "dynmus.midnightconfig.pigstepCold": "Pigstep",
+
+  "dynmus.midnightconfig.hotMusicTitle": "§c§nHot Music",
+  "dynmus.midnightconfig.creative1Hot": "Biome Fest (creative mode only)",
+  "dynmus.midnightconfig.creative2Hot": "Blind Spots (creative mode only)",
+  "dynmus.midnightconfig.creative3Hot": "Haunt Muskie (creative mode only)",
+  "dynmus.midnightconfig.creative4Hot": "Aria Math (creative mode only)",
+  "dynmus.midnightconfig.creative5Hot": "Dreiton (creative mode only)",
+  "dynmus.midnightconfig.creative6Hot": "Taswell (creative mode only)",
+  "dynmus.midnightconfig.calm1Hot": "Minecraft",
+  "dynmus.midnightconfig.calm2Hot": "Clark",
+  "dynmus.midnightconfig.calm3Hot": "Sweden",
+  "dynmus.midnightconfig.hal1Hot": "Subwoofer Lullaby",
+  "dynmus.midnightconfig.hal2Hot": "Living Mice",
+  "dynmus.midnightconfig.hal3Hot": "Haggstrom",
+  "dynmus.midnightconfig.hal4Hot": "Danny",
+  "dynmus.midnightconfig.nuance1Hot": "Key",
+  "dynmus.midnightconfig.nuance2Hot": "Oxygène",
+  "dynmus.midnightconfig.piano1Hot": "Dry Hands",
+  "dynmus.midnightconfig.piano2Hot": "Wet Hands",
+  "dynmus.midnightconfig.piano3Hot": "Mice on Venus",
+  "dynmus.midnightconfig.aerieHot": "Aerie",
+  "dynmus.midnightconfig.ancestryHot": "Ancestry",
+  "dynmus.midnightconfig.an_ordinary_dayHot": "An Ordinary Day",
+  "dynmus.midnightconfig.comforting_memoriesHot": "Comforting Memories",
+  "dynmus.midnightconfig.firebugsHot": "Firebugs",
+  "dynmus.midnightconfig.floating_dreamHot": "Floating Dream",
+  "dynmus.midnightconfig.infinite_amethystHot": "Infinite Amethyst",
+  "dynmus.midnightconfig.labyrinthineHot": "Labyrinthine",
+  "dynmus.midnightconfig.left_to_bloomHot": "Left to Bloom",
+  "dynmus.midnightconfig.one_more_dayHot": "One More Day",
+  "dynmus.midnightconfig.stand_tallHot": "Stand Tall",
+  "dynmus.midnightconfig.wendingHot": "Wending",
+  "dynmus.midnightconfig.thirteenHot": "Thirteen",
+  "dynmus.midnightconfig.catHot": "Cat",
+  "dynmus.midnightconfig.blocksHot": "Blocks",
+  "dynmus.midnightconfig.chirpHot": "Chirp",
+  "dynmus.midnightconfig.farHot": "Far",
+  "dynmus.midnightconfig.mallHot": "Mall",
+  "dynmus.midnightconfig.mellohiHot": "Mellohi",
+  "dynmus.midnightconfig.stalHot": "Stal",
+  "dynmus.midnightconfig.stradHot": "Strad",
+  "dynmus.midnightconfig.wardHot": "Ward",
+  "dynmus.midnightconfig.elevenHot": "Eleven",
+  "dynmus.midnightconfig.waitHot": "Wait",
+  "dynmus.midnightconfig.othersideHot": "otherside",
+  "dynmus.midnightconfig.fiveHot": "Five",
+  "dynmus.midnightconfig.pigstepHot": "Pigstep",
+
+  "dynmus.midnightconfig.niceMusicTitle": "§e§nNice Music",
+  "dynmus.midnightconfig.creative1Nice": "Biome Fest (creative mode only)",
+  "dynmus.midnightconfig.creative2Nice": "Blind Spots (creative mode only)",
+  "dynmus.midnightconfig.creative3Nice": "Haunt Muskie (creative mode only)",
+  "dynmus.midnightconfig.creative4Nice": "Aria Math (creative mode only)",
+  "dynmus.midnightconfig.creative5Nice": "Dreiton (creative mode only)",
+  "dynmus.midnightconfig.creative6Nice": "Taswell (creative mode only)",
+  "dynmus.midnightconfig.calm1Nice": "Minecraft",
+  "dynmus.midnightconfig.calm2Nice": "Clark",
+  "dynmus.midnightconfig.calm3Nice": "Sweden",
+  "dynmus.midnightconfig.hal1Nice": "Subwoofer Lullaby",
+  "dynmus.midnightconfig.hal2Nice": "Living Mice",
+  "dynmus.midnightconfig.hal3Nice": "Haggstrom",
+  "dynmus.midnightconfig.hal4Nice": "Danny",
+  "dynmus.midnightconfig.nuance1Nice": "Key",
+  "dynmus.midnightconfig.nuance2Nice": "Oxygène",
+  "dynmus.midnightconfig.piano1Nice": "Dry Hands",
+  "dynmus.midnightconfig.piano2Nice": "Wet Hands",
+  "dynmus.midnightconfig.piano3Nice": "Mice on Venus",
+  "dynmus.midnightconfig.aerieNice": "Aerie",
+  "dynmus.midnightconfig.ancestryNice": "Ancestry",
+  "dynmus.midnightconfig.an_ordinary_dayNice": "An Ordinary Day",
+  "dynmus.midnightconfig.comforting_memoriesNice": "Comforting Memories",
+  "dynmus.midnightconfig.firebugsNice": "Firebugs",
+  "dynmus.midnightconfig.floating_dreamNice": "Floating Dream",
+  "dynmus.midnightconfig.infinite_amethystNice": "Infinite Amethyst",
+  "dynmus.midnightconfig.labyrinthineNice": "Labyrinthine",
+  "dynmus.midnightconfig.left_to_bloomNice": "Left to Bloom",
+  "dynmus.midnightconfig.one_more_dayNice": "One More Day",
+  "dynmus.midnightconfig.stand_tallNice": "Stand Tall",
+  "dynmus.midnightconfig.wendingNice": "Wending",
+  "dynmus.midnightconfig.thirteenNice": "Thirteen",
+  "dynmus.midnightconfig.catNice": "Cat",
+  "dynmus.midnightconfig.blocksNice": "Blocks",
+  "dynmus.midnightconfig.chirpNice": "Chirp",
+  "dynmus.midnightconfig.farNice": "Far",
+  "dynmus.midnightconfig.mallNice": "Mall",
+  "dynmus.midnightconfig.mellohiNice": "Mellohi",
+  "dynmus.midnightconfig.stalNice": "Stal",
+  "dynmus.midnightconfig.stradNice": "Strad",
+  "dynmus.midnightconfig.wardNice": "Ward",
+  "dynmus.midnightconfig.elevenNice": "Eleven",
+  "dynmus.midnightconfig.waitNice": "Wait",
+  "dynmus.midnightconfig.othersideNice": "otherside",
+  "dynmus.midnightconfig.fiveNice": "Five",
+  "dynmus.midnightconfig.pigstepNice": "Pigstep",
+
+  "dynmus.midnightconfig.downMusicTitle": "§9§nDown Music",
+  "dynmus.midnightconfig.creative1Down": "Biome Fest (creative mode only)",
+  "dynmus.midnightconfig.creative2Down": "Blind Spots (creative mode only)",
+  "dynmus.midnightconfig.creative3Down": "Haunt Muskie (creative mode only)",
+  "dynmus.midnightconfig.creative4Down": "Aria Math (creative mode only)",
+  "dynmus.midnightconfig.creative5Down": "Dreiton (creative mode only)",
+  "dynmus.midnightconfig.creative6Down": "Taswell (creative mode only)",
+  "dynmus.midnightconfig.calm1Down": "Minecraft",
+  "dynmus.midnightconfig.calm2Down": "Clark",
+  "dynmus.midnightconfig.calm3Down": "Sweden",
+  "dynmus.midnightconfig.hal1Down": "Subwoofer Lullaby",
+  "dynmus.midnightconfig.hal2Down": "Living Mice",
+  "dynmus.midnightconfig.hal3Down": "Haggstrom",
+  "dynmus.midnightconfig.hal4Down": "Danny",
+  "dynmus.midnightconfig.nuance1Down": "Key",
+  "dynmus.midnightconfig.nuance2Down": "Oxygène",
+  "dynmus.midnightconfig.piano1Down": "Dry Hands",
+  "dynmus.midnightconfig.piano2Down": "Wet Hands",
+  "dynmus.midnightconfig.piano3Down": "Mice on Venus",
+  "dynmus.midnightconfig.aerieDown": "Aerie",
+  "dynmus.midnightconfig.ancestryDown": "Ancestry",
+  "dynmus.midnightconfig.an_ordinary_dayDown": "An Ordinary Day",
+  "dynmus.midnightconfig.comforting_memoriesDown": "Comforting Memories",
+  "dynmus.midnightconfig.firebugsDown": "Firebugs",
+  "dynmus.midnightconfig.floating_dreamDown": "Floating Dream",
+  "dynmus.midnightconfig.infinite_amethystDown": "Infinite Amethyst",
+  "dynmus.midnightconfig.labyrinthineDown": "Labyrinthine",
+  "dynmus.midnightconfig.left_to_bloomDown": "Left to Bloom",
+  "dynmus.midnightconfig.one_more_dayDown": "One More Day",
+  "dynmus.midnightconfig.stand_tallDown": "Stand Tall",
+  "dynmus.midnightconfig.wendingDown": "Wending",
+  "dynmus.midnightconfig.thirteenDown": "Thirteen",
+  "dynmus.midnightconfig.catDown": "Cat",
+  "dynmus.midnightconfig.blocksDown": "Blocks",
+  "dynmus.midnightconfig.chirpDown": "Chirp",
+  "dynmus.midnightconfig.farDown": "Far",
+  "dynmus.midnightconfig.mallDown": "Mall",
+  "dynmus.midnightconfig.mellohiDown": "Mellohi",
+  "dynmus.midnightconfig.stalDown": "Stal",
+  "dynmus.midnightconfig.stradDown": "Strad",
+  "dynmus.midnightconfig.wardDown": "Ward",
+  "dynmus.midnightconfig.elevenDown": "Eleven",
+  "dynmus.midnightconfig.waitDown": "Wait",
+  "dynmus.midnightconfig.othersideDown": "otherside",
+  "dynmus.midnightconfig.fiveDown": "Five",
+  "dynmus.midnightconfig.pigstepDown": "Pigstep"
 }
