--- a/common/src/main/resources/assets/dynmus/lang/en_us.json
+++ b/common/src/main/resources/assets/dynmus/lang/en_us.json
@@ -5,17 +5,17 @@
 
 	"text.autoconfig.dynmus.option.generalConfig.musicTypesToggles.@PrefixText": "Music Types Toggles",
 	"text.autoconfig.dynmus.option.generalConfig.musicTypesToggles.caveMusic": "Cave Music",
-	"text.autoconfig.dynmus.option.generalConfig.musicTypesToggles.caveMusic.@Tooltip": "Play cave music in caves",
+	"text.autoconfig.dynmus.option.generalConfig.musicTypesToggles.caveMusic.@Tooltip": "Configure what music plays in caves.",
 	"text.autoconfig.dynmus.option.generalConfig.musicTypesToggles.coldMusic": "Cold Music",
-	"text.autoconfig.dynmus.option.generalConfig.musicTypesToggles.coldMusic.@Tooltip": "Play cold music in cold biomes",
+	"text.autoconfig.dynmus.option.generalConfig.musicTypesToggles.coldMusic.@Tooltip": "Configure what music plays in cold biomes.",
 	"text.autoconfig.dynmus.option.generalConfig.musicTypesToggles.hotMusic": "Hot Music",
-	"text.autoconfig.dynmus.option.generalConfig.musicTypesToggles.hotMusic.@Tooltip": "Play hot music in hot biomes",
+	"text.autoconfig.dynmus.option.generalConfig.musicTypesToggles.hotMusic.@Tooltip": "Configure what music plays in hot biomes.",
 	"text.autoconfig.dynmus.option.generalConfig.musicTypesToggles.niceMusic": "Nice Music",
-	"text.autoconfig.dynmus.option.generalConfig.musicTypesToggles.niceMusic.@Tooltip": "Play nice music during the day",
+	"text.autoconfig.dynmus.option.generalConfig.musicTypesToggles.niceMusic.@Tooltip": "Configure what music plays during the day.",
 	"text.autoconfig.dynmus.option.generalConfig.musicTypesToggles.downMusic": "Down Music",
-	"text.autoconfig.dynmus.option.generalConfig.musicTypesToggles.downMusic.@Tooltip": "Play down/sad music during the night and while it rains",
-	"text.autoconfig.dynmus.option.generalConfig.musicTypesToggles.endCreativeMusic": "End Creative Music",
-	"text.autoconfig.dynmus.option.generalConfig.musicTypesToggles.endCreativeMusic.@Tooltip": "Play original music composed by LudoCrypt\nwhen in creative mode in the End dimension",
+	"text.autoconfig.dynmus.option.generalConfig.musicTypesToggles.downMusic.@Tooltip": "Configure what music plays during the night and while it rains.",
+	"text.autoconfig.dynmus.option.generalConfig.musicTypesToggles.endMusic": "End Music",
+	"text.autoconfig.dynmus.option.generalConfig.musicTypesToggles.endMusic.@Tooltip": "Configure what music plays in the End.\nBy default, will play original music composed\nby LudoCrypt when in creative mode.",
 	"text.autoconfig.dynmus.option.generalConfig.musicTypesToggles.endBossMusic": "End Boss Music",
 	"text.autoconfig.dynmus.option.generalConfig.musicTypesToggles.endBossMusic.@Tooltip": "Play original music composed by LudoCrypt\nwhen fighting the dragon in the End dimension",
 
@@ -91,6 +91,11 @@
 	"text.autoconfig.dynmus.option.musicSelector.caveMusic.otherside": "otherside",
 	"text.autoconfig.dynmus.option.musicSelector.caveMusic.five": "Five",
 	"text.autoconfig.dynmus.option.musicSelector.caveMusic.pigstep": "Pigstep",
+	"text.autoconfig.dynmus.option.musicSelector.caveMusic.end": "The End",
+	"text.autoconfig.dynmus.option.musicSelector.caveMusic.end_creative1": "Balloon",
+	"text.autoconfig.dynmus.option.musicSelector.caveMusic.end_creative2": "Borat",
+	"text.autoconfig.dynmus.option.musicSelector.caveMusic.end_creative3": "Ethereal Ereria",
+	"text.autoconfig.dynmus.option.musicSelector.caveMusic.end_creative4": "Edreit",
 
 	"text.autoconfig.dynmus.option.musicSelector.coldMusic": "Cold Music",
 	"text.autoconfig.dynmus.option.musicSelector.coldMusic.creative1": "Biome Fest",
@@ -138,6 +143,11 @@
 	"text.autoconfig.dynmus.option.musicSelector.coldMusic.otherside": "otherside",
 	"text.autoconfig.dynmus.option.musicSelector.coldMusic.five": "Five",
 	"text.autoconfig.dynmus.option.musicSelector.coldMusic.pigstep": "Pigstep",
+	"text.autoconfig.dynmus.option.musicSelector.coldMusic.end": "The End",
+	"text.autoconfig.dynmus.option.musicSelector.coldMusic.end_creative1": "Balloon",
+	"text.autoconfig.dynmus.option.musicSelector.coldMusic.end_creative2": "Borat",
+	"text.autoconfig.dynmus.option.musicSelector.coldMusic.end_creative3": "Ethereal Ereria",
+	"text.autoconfig.dynmus.option.musicSelector.coldMusic.end_creative4": "Edreit",
 
 	"text.autoconfig.dynmus.option.musicSelector.hotMusic": "Hot Music",
 	"text.autoconfig.dynmus.option.musicSelector.hotMusic.creative1": "Biome Fest",
@@ -185,6 +195,11 @@
 	"text.autoconfig.dynmus.option.musicSelector.hotMusic.otherside": "otherside",
 	"text.autoconfig.dynmus.option.musicSelector.hotMusic.five": "Five",
 	"text.autoconfig.dynmus.option.musicSelector.hotMusic.pigstep": "Pigstep",
+	"text.autoconfig.dynmus.option.musicSelector.hotMusic.end": "The End",
+	"text.autoconfig.dynmus.option.musicSelector.hotMusic.end_creative1": "Balloon",
+	"text.autoconfig.dynmus.option.musicSelector.hotMusic.end_creative2": "Borat",
+	"text.autoconfig.dynmus.option.musicSelector.hotMusic.end_creative3": "Ethereal Ereria",
+	"text.autoconfig.dynmus.option.musicSelector.hotMusic.end_creative4": "Edreit",
 
 	"text.autoconfig.dynmus.option.musicSelector.niceMusic": "Nice Music",
 	"text.autoconfig.dynmus.option.musicSelector.niceMusic.creative1": "Biome Fest",
@@ -232,6 +247,11 @@
 	"text.autoconfig.dynmus.option.musicSelector.niceMusic.otherside": "otherside",
 	"text.autoconfig.dynmus.option.musicSelector.niceMusic.five": "Five",
 	"text.autoconfig.dynmus.option.musicSelector.niceMusic.pigstep": "Pigstep",
+	"text.autoconfig.dynmus.option.musicSelector.niceMusic.end": "The End",
+	"text.autoconfig.dynmus.option.musicSelector.niceMusic.end_creative1": "Balloon",
+	"text.autoconfig.dynmus.option.musicSelector.niceMusic.end_creative2": "Borat",
+	"text.autoconfig.dynmus.option.musicSelector.niceMusic.end_creative3": "Ethereal Ereria",
+	"text.autoconfig.dynmus.option.musicSelector.niceMusic.end_creative4": "Edreit",
 
 	"text.autoconfig.dynmus.option.musicSelector.downMusic": "Down Music",
 	"text.autoconfig.dynmus.option.musicSelector.downMusic.creative1": "Biome Fest",
@@ -278,5 +298,62 @@
 	"text.autoconfig.dynmus.option.musicSelector.downMusic.wait": "Wait",
 	"text.autoconfig.dynmus.option.musicSelector.downMusic.otherside": "otherside",
 	"text.autoconfig.dynmus.option.musicSelector.downMusic.five": "Five",
-	"text.autoconfig.dynmus.option.musicSelector.downMusic.pigstep": "Pigstep"
+	"text.autoconfig.dynmus.option.musicSelector.downMusic.pigstep": "Pigstep",
+	"text.autoconfig.dynmus.option.musicSelector.downMusic.end": "The End",
+	"text.autoconfig.dynmus.option.musicSelector.downMusic.end_creative1": "Balloon",
+	"text.autoconfig.dynmus.option.musicSelector.downMusic.end_creative2": "Borat",
+	"text.autoconfig.dynmus.option.musicSelector.downMusic.end_creative3": "Ethereal Ereria",
+	"text.autoconfig.dynmus.option.musicSelector.downMusic.end_creative4": "Edreit",
+
+	"text.autoconfig.dynmus.option.musicSelector.endMusic": "End Music",
+	"text.autoconfig.dynmus.option.musicSelector.endMusic.creative1": "Biome Fest",
+	"text.autoconfig.dynmus.option.musicSelector.endMusic.creative2": "Blind Spots",
+	"text.autoconfig.dynmus.option.musicSelector.endMusic.creative3": "Haunt Muskie",
+	"text.autoconfig.dynmus.option.musicSelector.endMusic.creative4": "Aria Math",
+	"text.autoconfig.dynmus.option.musicSelector.endMusic.creative5": "Dreiton",
+	"text.autoconfig.dynmus.option.musicSelector.endMusic.creative6": "Taswell",
+	"text.autoconfig.dynmus.option.musicSelector.endMusic.calm1": "Minecraft",
+	"text.autoconfig.dynmus.option.musicSelector.endMusic.calm2": "Clark",
+	"text.autoconfig.dynmus.option.musicSelector.endMusic.calm3": "Sweden",
+	"text.autoconfig.dynmus.option.musicSelector.endMusic.hal1": "Subwoofer Lullaby",
+	"text.autoconfig.dynmus.option.musicSelector.endMusic.hal2": "Living Mice",
+	"text.autoconfig.dynmus.option.musicSelector.endMusic.hal3": "Haggstrom",
+	"text.autoconfig.dynmus.option.musicSelector.endMusic.hal4": "Danny",
+	"text.autoconfig.dynmus.option.musicSelector.endMusic.nuance1": "Key",
+	"text.autoconfig.dynmus.option.musicSelector.endMusic.nuance2": "Oxygène",
+	"text.autoconfig.dynmus.option.musicSelector.endMusic.piano1": "Dry Hands",
+	"text.autoconfig.dynmus.option.musicSelector.endMusic.piano2": "Wet Hands",
+	"text.autoconfig.dynmus.option.musicSelector.endMusic.piano3": "Mice on Venus",
+	"text.autoconfig.dynmus.option.musicSelector.endMusic.aerie": "Aerie",
+	"text.autoconfig.dynmus.option.musicSelector.endMusic.ancestry": "Ancestry",
+	"text.autoconfig.dynmus.option.musicSelector.endMusic.an_ordinary_day": "An Ordinary Day",
+	"text.autoconfig.dynmus.option.musicSelector.endMusic.comforting_memories": "Comforting Memories",
+	"text.autoconfig.dynmus.option.musicSelector.endMusic.firebugs": "Firebugs",
+	"text.autoconfig.dynmus.option.musicSelector.endMusic.floating_dream": "Floating Dream",
+	"text.autoconfig.dynmus.option.musicSelector.endMusic.infinite_amethyst": "Infinite Amethyst",
+	"text.autoconfig.dynmus.option.musicSelector.endMusic.labyrinthine": "Labyrinthine",
+	"text.autoconfig.dynmus.option.musicSelector.endMusic.left_to_bloom": "Left to Bloom",
+	"text.autoconfig.dynmus.option.musicSelector.endMusic.one_more_day": "One More Day",
+	"text.autoconfig.dynmus.option.musicSelector.endMusic.stand_tall": "Stand Tall",
+	"text.autoconfig.dynmus.option.musicSelector.endMusic.wending": "Wending",
+	"text.autoconfig.dynmus.option.musicSelector.endMusic.thirteen": "Thirteen",
+	"text.autoconfig.dynmus.option.musicSelector.endMusic.cat": "Cat",
+	"text.autoconfig.dynmus.option.musicSelector.endMusic.blocks": "Blocks",
+	"text.autoconfig.dynmus.option.musicSelector.endMusic.chirp": "Chirp",
+	"text.autoconfig.dynmus.option.musicSelector.endMusic.far": "Far",
+	"text.autoconfig.dynmus.option.musicSelector.endMusic.mall": "Mall",
+	"text.autoconfig.dynmus.option.musicSelector.endMusic.mellohi": "Mellohi",
+	"text.autoconfig.dynmus.option.musicSelector.endMusic.stal": "Stal",
+	"text.autoconfig.dynmus.option.musicSelector.endMusic.strad": "Strad",
+	"text.autoconfig.dynmus.option.musicSelector.endMusic.ward": "Ward",
+	"text.autoconfig.dynmus.option.musicSelector.endMusic.eleven": "Eleven",
+	"text.autoconfig.dynmus.option.musicSelector.endMusic.wait": "Wait",
+	"text.autoconfig.dynmus.option.musicSelector.endMusic.otherside": "otherside",
+	"text.autoconfig.dynmus.option.musicSelector.endMusic.five": "Five",
+	"text.autoconfig.dynmus.option.musicSelector.endMusic.pigstep": "Pigstep",
+	"text.autoconfig.dynmus.option.musicSelector.endMusic.end": "The End",
+	"text.autoconfig.dynmus.option.musicSelector.endMusic.end_creative1": "Balloon",
+	"text.autoconfig.dynmus.option.musicSelector.endMusic.end_creative2": "Borat",
+	"text.autoconfig.dynmus.option.musicSelector.endMusic.end_creative3": "Ethereal Ereria",
+	"text.autoconfig.dynmus.option.musicSelector.endMusic.end_creative4": "Edreit"
 }
