--- a/common/src/main/resources/assets/dynmus/lang/en_us.json
+++ b/common/src/main/resources/assets/dynmus/lang/en_us.json
@@ -1,6 +1,7 @@
 {
 	"text.autoconfig.dynmus.title": "Dynamic Music Config",
 
+
 	"text.autoconfig.dynmus.category.generalConfig": "General Config",
 
 	"text.autoconfig.dynmus.option.generalConfig.musicTypesToggles.@PrefixText": "Music Types Toggles",
@@ -43,10 +44,14 @@
 	"text.autoconfig.dynmus.option.generalConfig.mineshaftDetection.percent": "Mineshaft Percent",
 	"text.autoconfig.dynmus.option.generalConfig.mineshaftDetection.percent.@Tooltip": "Percent of mineshaft blocks for mineshaft detection\nAny value >= 1 disables mineshaft detection",
 
+
+
 	"text.autoconfig.dynmus.category.musicSelector": "Music Selector",
+
 
 	"text.autoconfig.dynmus.option.musicSelector.caveMusic": "Cave Music",
 	"text.autoconfig.dynmus.option.musicSelector.caveMusic.@Tooltip": "Music that plays in caves",
+
 	"text.autoconfig.dynmus.option.musicSelector.caveMusic.creative1": "Biome Fest",
 	"text.autoconfig.dynmus.option.musicSelector.caveMusic.creative2": "Blind Spots",
 	"text.autoconfig.dynmus.option.musicSelector.caveMusic.creative3": "Haunt Muskie",
@@ -67,8 +72,12 @@
 	"text.autoconfig.dynmus.option.musicSelector.caveMusic.piano3": "Mice on Venus",
 	"text.autoconfig.dynmus.option.musicSelector.caveMusic.aerie": "Aerie",
 	"text.autoconfig.dynmus.option.musicSelector.caveMusic.ancestry": "Ancestry",
+	"text.autoconfig.dynmus.option.musicSelector.caveMusic.a_familiar_room": "A Familiar Room",
 	"text.autoconfig.dynmus.option.musicSelector.caveMusic.an_ordinary_day": "An Ordinary Day",
+	"text.autoconfig.dynmus.option.musicSelector.caveMusic.bromeliad": "Bromeliad",
 	"text.autoconfig.dynmus.option.musicSelector.caveMusic.comforting_memories": "Comforting Memories",
+	"text.autoconfig.dynmus.option.musicSelector.caveMusic.crescent_dunes": "Crescent Dunes",
+	"text.autoconfig.dynmus.option.musicSelector.caveMusic.echo_in_the_wind": "Echo in the Wind",
 	"text.autoconfig.dynmus.option.musicSelector.caveMusic.firebugs": "Firebugs",
 	"text.autoconfig.dynmus.option.musicSelector.caveMusic.floating_dream": "Floating Dream",
 	"text.autoconfig.dynmus.option.musicSelector.caveMusic.infinite_amethyst": "Infinite Amethyst",
@@ -77,6 +86,7 @@
 	"text.autoconfig.dynmus.option.musicSelector.caveMusic.one_more_day": "One More Day",
 	"text.autoconfig.dynmus.option.musicSelector.caveMusic.stand_tall": "Stand Tall",
 	"text.autoconfig.dynmus.option.musicSelector.caveMusic.wending": "Wending",
+
 	"text.autoconfig.dynmus.option.musicSelector.caveMusic.thirteen": "Thirteen",
 	"text.autoconfig.dynmus.option.musicSelector.caveMusic.cat": "Cat",
 	"text.autoconfig.dynmus.option.musicSelector.caveMusic.blocks": "Blocks",
@@ -92,14 +102,18 @@
 	"text.autoconfig.dynmus.option.musicSelector.caveMusic.otherside": "otherside",
 	"text.autoconfig.dynmus.option.musicSelector.caveMusic.five": "Five",
 	"text.autoconfig.dynmus.option.musicSelector.caveMusic.pigstep": "Pigstep",
+	"text.autoconfig.dynmus.option.musicSelector.caveMusic.relic": "Relic",
+
 	"text.autoconfig.dynmus.option.musicSelector.caveMusic.end": "The End",
 	"text.autoconfig.dynmus.option.musicSelector.caveMusic.end_creative1": "Balloon",
 	"text.autoconfig.dynmus.option.musicSelector.caveMusic.end_creative2": "Borat",
 	"text.autoconfig.dynmus.option.musicSelector.caveMusic.end_creative3": "Ethereal Ereria",
 	"text.autoconfig.dynmus.option.musicSelector.caveMusic.end_creative4": "Edreit",
 
+
 	"text.autoconfig.dynmus.option.musicSelector.coldMusic": "Cold Music",
 	"text.autoconfig.dynmus.option.musicSelector.coldMusic.@Tooltip": "Music that plays in cold biomes when the sun is out",
+
 	"text.autoconfig.dynmus.option.musicSelector.coldMusic.creative1": "Biome Fest",
 	"text.autoconfig.dynmus.option.musicSelector.coldMusic.creative2": "Blind Spots",
 	"text.autoconfig.dynmus.option.musicSelector.coldMusic.creative3": "Haunt Muskie",
@@ -120,8 +134,12 @@
 	"text.autoconfig.dynmus.option.musicSelector.coldMusic.piano3": "Mice on Venus",
 	"text.autoconfig.dynmus.option.musicSelector.coldMusic.aerie": "Aerie",
 	"text.autoconfig.dynmus.option.musicSelector.coldMusic.ancestry": "Ancestry",
+	"text.autoconfig.dynmus.option.musicSelector.coldMusic.a_familiar_room": "A Familiar Room",
 	"text.autoconfig.dynmus.option.musicSelector.coldMusic.an_ordinary_day": "An Ordinary Day",
+	"text.autoconfig.dynmus.option.musicSelector.coldMusic.bromeliad": "Bromeliad",
 	"text.autoconfig.dynmus.option.musicSelector.coldMusic.comforting_memories": "Comforting Memories",
+	"text.autoconfig.dynmus.option.musicSelector.coldMusic.crescent_dunes": "Crescent Dunes",
+	"text.autoconfig.dynmus.option.musicSelector.coldMusic.echo_in_the_wind": "Echo in the Wind",
 	"text.autoconfig.dynmus.option.musicSelector.coldMusic.firebugs": "Firebugs",
 	"text.autoconfig.dynmus.option.musicSelector.coldMusic.floating_dream": "Floating Dream",
 	"text.autoconfig.dynmus.option.musicSelector.coldMusic.infinite_amethyst": "Infinite Amethyst",
@@ -130,6 +148,7 @@
 	"text.autoconfig.dynmus.option.musicSelector.coldMusic.one_more_day": "One More Day",
 	"text.autoconfig.dynmus.option.musicSelector.coldMusic.stand_tall": "Stand Tall",
 	"text.autoconfig.dynmus.option.musicSelector.coldMusic.wending": "Wending",
+
 	"text.autoconfig.dynmus.option.musicSelector.coldMusic.thirteen": "Thirteen",
 	"text.autoconfig.dynmus.option.musicSelector.coldMusic.cat": "Cat",
 	"text.autoconfig.dynmus.option.musicSelector.coldMusic.blocks": "Blocks",
@@ -145,14 +164,18 @@
 	"text.autoconfig.dynmus.option.musicSelector.coldMusic.otherside": "otherside",
 	"text.autoconfig.dynmus.option.musicSelector.coldMusic.five": "Five",
 	"text.autoconfig.dynmus.option.musicSelector.coldMusic.pigstep": "Pigstep",
+	"text.autoconfig.dynmus.option.musicSelector.coldMusic.relic": "Relic",
+
 	"text.autoconfig.dynmus.option.musicSelector.coldMusic.end": "The End",
 	"text.autoconfig.dynmus.option.musicSelector.coldMusic.end_creative1": "Balloon",
 	"text.autoconfig.dynmus.option.musicSelector.coldMusic.end_creative2": "Borat",
 	"text.autoconfig.dynmus.option.musicSelector.coldMusic.end_creative3": "Ethereal Ereria",
 	"text.autoconfig.dynmus.option.musicSelector.coldMusic.end_creative4": "Edreit",
 
+
 	"text.autoconfig.dynmus.option.musicSelector.hotMusic": "Hot Music",
 	"text.autoconfig.dynmus.option.musicSelector.hotMusic.@Tooltip": "Music that plays in hot biomes when the sun is out",
+
 	"text.autoconfig.dynmus.option.musicSelector.hotMusic.creative1": "Biome Fest",
 	"text.autoconfig.dynmus.option.musicSelector.hotMusic.creative2": "Blind Spots",
 	"text.autoconfig.dynmus.option.musicSelector.hotMusic.creative3": "Haunt Muskie",
@@ -173,8 +196,12 @@
 	"text.autoconfig.dynmus.option.musicSelector.hotMusic.piano3": "Mice on Venus",
 	"text.autoconfig.dynmus.option.musicSelector.hotMusic.aerie": "Aerie",
 	"text.autoconfig.dynmus.option.musicSelector.hotMusic.ancestry": "Ancestry",
+	"text.autoconfig.dynmus.option.musicSelector.hotMusic.a_familiar_room": "A Familiar Room",
 	"text.autoconfig.dynmus.option.musicSelector.hotMusic.an_ordinary_day": "An Ordinary Day",
+	"text.autoconfig.dynmus.option.musicSelector.hotMusic.bromeliad": "Bromeliad",
 	"text.autoconfig.dynmus.option.musicSelector.hotMusic.comforting_memories": "Comforting Memories",
+	"text.autoconfig.dynmus.option.musicSelector.hotMusic.crescent_dunes": "Crescent Dunes",
+	"text.autoconfig.dynmus.option.musicSelector.hotMusic.echo_in_the_wind": "Echo in the Wind",
 	"text.autoconfig.dynmus.option.musicSelector.hotMusic.firebugs": "Firebugs",
 	"text.autoconfig.dynmus.option.musicSelector.hotMusic.floating_dream": "Floating Dream",
 	"text.autoconfig.dynmus.option.musicSelector.hotMusic.infinite_amethyst": "Infinite Amethyst",
@@ -183,6 +210,7 @@
 	"text.autoconfig.dynmus.option.musicSelector.hotMusic.one_more_day": "One More Day",
 	"text.autoconfig.dynmus.option.musicSelector.hotMusic.stand_tall": "Stand Tall",
 	"text.autoconfig.dynmus.option.musicSelector.hotMusic.wending": "Wending",
+
 	"text.autoconfig.dynmus.option.musicSelector.hotMusic.thirteen": "Thirteen",
 	"text.autoconfig.dynmus.option.musicSelector.hotMusic.cat": "Cat",
 	"text.autoconfig.dynmus.option.musicSelector.hotMusic.blocks": "Blocks",
@@ -198,14 +226,18 @@
 	"text.autoconfig.dynmus.option.musicSelector.hotMusic.otherside": "otherside",
 	"text.autoconfig.dynmus.option.musicSelector.hotMusic.five": "Five",
 	"text.autoconfig.dynmus.option.musicSelector.hotMusic.pigstep": "Pigstep",
+	"text.autoconfig.dynmus.option.musicSelector.hotMusic.relic": "Relic",
+
 	"text.autoconfig.dynmus.option.musicSelector.hotMusic.end": "The End",
 	"text.autoconfig.dynmus.option.musicSelector.hotMusic.end_creative1": "Balloon",
 	"text.autoconfig.dynmus.option.musicSelector.hotMusic.end_creative2": "Borat",
 	"text.autoconfig.dynmus.option.musicSelector.hotMusic.end_creative3": "Ethereal Ereria",
 	"text.autoconfig.dynmus.option.musicSelector.hotMusic.end_creative4": "Edreit",
 
+
 	"text.autoconfig.dynmus.option.musicSelector.niceMusic": "Nice Music",
 	"text.autoconfig.dynmus.option.musicSelector.niceMusic.@Tooltip": "Music that plays in temperate biomes when the sun is out",
+
 	"text.autoconfig.dynmus.option.musicSelector.niceMusic.creative1": "Biome Fest",
 	"text.autoconfig.dynmus.option.musicSelector.niceMusic.creative2": "Blind Spots",
 	"text.autoconfig.dynmus.option.musicSelector.niceMusic.creative3": "Haunt Muskie",
@@ -226,8 +258,12 @@
 	"text.autoconfig.dynmus.option.musicSelector.niceMusic.piano3": "Mice on Venus",
 	"text.autoconfig.dynmus.option.musicSelector.niceMusic.aerie": "Aerie",
 	"text.autoconfig.dynmus.option.musicSelector.niceMusic.ancestry": "Ancestry",
+	"text.autoconfig.dynmus.option.musicSelector.niceMusic.a_familiar_room": "A Familiar Room",
 	"text.autoconfig.dynmus.option.musicSelector.niceMusic.an_ordinary_day": "An Ordinary Day",
+	"text.autoconfig.dynmus.option.musicSelector.niceMusic.bromeliad": "Bromeliad",
 	"text.autoconfig.dynmus.option.musicSelector.niceMusic.comforting_memories": "Comforting Memories",
+	"text.autoconfig.dynmus.option.musicSelector.niceMusic.crescent_dunes": "Crescent Dunes",
+	"text.autoconfig.dynmus.option.musicSelector.niceMusic.echo_in_the_wind": "Echo in the Wind",
 	"text.autoconfig.dynmus.option.musicSelector.niceMusic.firebugs": "Firebugs",
 	"text.autoconfig.dynmus.option.musicSelector.niceMusic.floating_dream": "Floating Dream",
 	"text.autoconfig.dynmus.option.musicSelector.niceMusic.infinite_amethyst": "Infinite Amethyst",
@@ -236,6 +272,7 @@
 	"text.autoconfig.dynmus.option.musicSelector.niceMusic.one_more_day": "One More Day",
 	"text.autoconfig.dynmus.option.musicSelector.niceMusic.stand_tall": "Stand Tall",
 	"text.autoconfig.dynmus.option.musicSelector.niceMusic.wending": "Wending",
+
 	"text.autoconfig.dynmus.option.musicSelector.niceMusic.thirteen": "Thirteen",
 	"text.autoconfig.dynmus.option.musicSelector.niceMusic.cat": "Cat",
 	"text.autoconfig.dynmus.option.musicSelector.niceMusic.blocks": "Blocks",
@@ -251,14 +288,18 @@
 	"text.autoconfig.dynmus.option.musicSelector.niceMusic.otherside": "otherside",
 	"text.autoconfig.dynmus.option.musicSelector.niceMusic.five": "Five",
 	"text.autoconfig.dynmus.option.musicSelector.niceMusic.pigstep": "Pigstep",
+	"text.autoconfig.dynmus.option.musicSelector.niceMusic.relic": "Relic",
+
 	"text.autoconfig.dynmus.option.musicSelector.niceMusic.end": "The End",
 	"text.autoconfig.dynmus.option.musicSelector.niceMusic.end_creative1": "Balloon",
 	"text.autoconfig.dynmus.option.musicSelector.niceMusic.end_creative2": "Borat",
 	"text.autoconfig.dynmus.option.musicSelector.niceMusic.end_creative3": "Ethereal Ereria",
 	"text.autoconfig.dynmus.option.musicSelector.niceMusic.end_creative4": "Edreit",
 
+
 	"text.autoconfig.dynmus.option.musicSelector.downMusic": "Down Music",
 	"text.autoconfig.dynmus.option.musicSelector.downMusic.@Tooltip": "Music that plays in during the night and when its raining",
+
 	"text.autoconfig.dynmus.option.musicSelector.downMusic.creative1": "Biome Fest",
 	"text.autoconfig.dynmus.option.musicSelector.downMusic.creative2": "Blind Spots",
 	"text.autoconfig.dynmus.option.musicSelector.downMusic.creative3": "Haunt Muskie",
@@ -279,8 +320,12 @@
 	"text.autoconfig.dynmus.option.musicSelector.downMusic.piano3": "Mice on Venus",
 	"text.autoconfig.dynmus.option.musicSelector.downMusic.aerie": "Aerie",
 	"text.autoconfig.dynmus.option.musicSelector.downMusic.ancestry": "Ancestry",
+	"text.autoconfig.dynmus.option.musicSelector.downMusic.a_familiar_room": "A Familiar Room",
 	"text.autoconfig.dynmus.option.musicSelector.downMusic.an_ordinary_day": "An Ordinary Day",
+	"text.autoconfig.dynmus.option.musicSelector.downMusic.bromeliad": "Bromeliad",
 	"text.autoconfig.dynmus.option.musicSelector.downMusic.comforting_memories": "Comforting Memories",
+	"text.autoconfig.dynmus.option.musicSelector.downMusic.crescent_dunes": "Crescent Dunes",
+	"text.autoconfig.dynmus.option.musicSelector.downMusic.echo_in_the_wind": "Echo in the Wind",
 	"text.autoconfig.dynmus.option.musicSelector.downMusic.firebugs": "Firebugs",
 	"text.autoconfig.dynmus.option.musicSelector.downMusic.floating_dream": "Floating Dream",
 	"text.autoconfig.dynmus.option.musicSelector.downMusic.infinite_amethyst": "Infinite Amethyst",
@@ -289,6 +334,7 @@
 	"text.autoconfig.dynmus.option.musicSelector.downMusic.one_more_day": "One More Day",
 	"text.autoconfig.dynmus.option.musicSelector.downMusic.stand_tall": "Stand Tall",
 	"text.autoconfig.dynmus.option.musicSelector.downMusic.wending": "Wending",
+
 	"text.autoconfig.dynmus.option.musicSelector.downMusic.thirteen": "Thirteen",
 	"text.autoconfig.dynmus.option.musicSelector.downMusic.cat": "Cat",
 	"text.autoconfig.dynmus.option.musicSelector.downMusic.blocks": "Blocks",
@@ -304,14 +350,18 @@
 	"text.autoconfig.dynmus.option.musicSelector.downMusic.otherside": "otherside",
 	"text.autoconfig.dynmus.option.musicSelector.downMusic.five": "Five",
 	"text.autoconfig.dynmus.option.musicSelector.downMusic.pigstep": "Pigstep",
+	"text.autoconfig.dynmus.option.musicSelector.downMusic.relic": "Relic",
+
 	"text.autoconfig.dynmus.option.musicSelector.downMusic.end": "The End",
 	"text.autoconfig.dynmus.option.musicSelector.downMusic.end_creative1": "Balloon",
 	"text.autoconfig.dynmus.option.musicSelector.downMusic.end_creative2": "Borat",
 	"text.autoconfig.dynmus.option.musicSelector.downMusic.end_creative3": "Ethereal Ereria",
 	"text.autoconfig.dynmus.option.musicSelector.downMusic.end_creative4": "Edreit",
 
+
 	"text.autoconfig.dynmus.option.musicSelector.endMusic": "End Music",
 	"text.autoconfig.dynmus.option.musicSelector.endMusic.@Tooltip": "Music that plays in the End",
+
 	"text.autoconfig.dynmus.option.musicSelector.endMusic.creative1": "Biome Fest",
 	"text.autoconfig.dynmus.option.musicSelector.endMusic.creative2": "Blind Spots",
 	"text.autoconfig.dynmus.option.musicSelector.endMusic.creative3": "Haunt Muskie",
@@ -332,8 +382,12 @@
 	"text.autoconfig.dynmus.option.musicSelector.endMusic.piano3": "Mice on Venus",
 	"text.autoconfig.dynmus.option.musicSelector.endMusic.aerie": "Aerie",
 	"text.autoconfig.dynmus.option.musicSelector.endMusic.ancestry": "Ancestry",
+	"text.autoconfig.dynmus.option.musicSelector.endMusic.a_familiar_room": "A Familiar Room",
 	"text.autoconfig.dynmus.option.musicSelector.endMusic.an_ordinary_day": "An Ordinary Day",
+	"text.autoconfig.dynmus.option.musicSelector.endMusic.bromeliad": "Bromeliad",
 	"text.autoconfig.dynmus.option.musicSelector.endMusic.comforting_memories": "Comforting Memories",
+	"text.autoconfig.dynmus.option.musicSelector.endMusic.crescent_dunes": "Crescent Dunes",
+	"text.autoconfig.dynmus.option.musicSelector.endMusic.echo_in_the_wind": "Echo in the Wind",
 	"text.autoconfig.dynmus.option.musicSelector.endMusic.firebugs": "Firebugs",
 	"text.autoconfig.dynmus.option.musicSelector.endMusic.floating_dream": "Floating Dream",
 	"text.autoconfig.dynmus.option.musicSelector.endMusic.infinite_amethyst": "Infinite Amethyst",
@@ -342,6 +396,7 @@
 	"text.autoconfig.dynmus.option.musicSelector.endMusic.one_more_day": "One More Day",
 	"text.autoconfig.dynmus.option.musicSelector.endMusic.stand_tall": "Stand Tall",
 	"text.autoconfig.dynmus.option.musicSelector.endMusic.wending": "Wending",
+
 	"text.autoconfig.dynmus.option.musicSelector.endMusic.thirteen": "Thirteen",
 	"text.autoconfig.dynmus.option.musicSelector.endMusic.cat": "Cat",
 	"text.autoconfig.dynmus.option.musicSelector.endMusic.blocks": "Blocks",
@@ -357,6 +412,8 @@
 	"text.autoconfig.dynmus.option.musicSelector.endMusic.otherside": "otherside",
 	"text.autoconfig.dynmus.option.musicSelector.endMusic.five": "Five",
 	"text.autoconfig.dynmus.option.musicSelector.endMusic.pigstep": "Pigstep",
+	"text.autoconfig.dynmus.option.musicSelector.endMusic.relic": "Relic",
+
 	"text.autoconfig.dynmus.option.musicSelector.endMusic.end": "The End",
 	"text.autoconfig.dynmus.option.musicSelector.endMusic.end_creative1": "Balloon",
 	"text.autoconfig.dynmus.option.musicSelector.endMusic.end_creative2": "Borat",
